fix: video not fitting issue

--- a/src/components/adverts/style.scss
+++ b/src/components/adverts/style.scss
@@ -35,13 +35,13 @@
 
         video {
           width: 100%;
+          height: 100%;
           border-radius: 10px;
           object-fit: cover;
           position: absolute;
           top: 0;
           left: 0;
         }
-
       }
     }
   }
@@ -83,22 +83,5 @@
         border: none;
       }
     }
-  }
-}
-
-
-.overlay {
-  position: absolute;
-  border-radius: 10px;
-  background-color: black;
-  opacity: 0.9;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  transition: 0.3s ease-out all;
-
-  &.visible {
-    opacity: 0.5;
   }
 }
